# Finace

./: .env.example  .gitignore  CHANGELOG.md  README.md  go.mod  pyproject.toml
.streamlit/: config.toml
cmd/fundmaster/: main.go
config/: default.yaml
docs/: PRODUCT_GUIDE.md  RELEASE_VALIDATION_0.3.1.md
internal/market/: eastmoney.go
internal/portfolio/: service.go  service_test.go
internal/quant/: backtest.go  backtest_test.go  optimizer.go
internal/server/: server.go  server_test.go
internal/server/static/: app.css  app.js  index.html
internal/storage/: store.go  store_test.go
src/: __init__.py
src/analysis/: ai_analyzer.py  engine.py  stock_analyzer.py
src/backtest/: engine.py
src/cli/: main.py
src/data/: fund_api.py  stock_api.py
src/integrations/: __init__.py  llm_gateway.py
src/news/: __init__.py  service.py
src/portfolio/: manager.py
src/resources/: __init__.py  default.yaml
src/storage/: __init__.py  local_store.py
src/strategy/: __init__.py  optimizer.py  walk_forward.py
src/ui/: app.py
src/utils/: config.py
tests/: test_backtest.py  test_cli_storage.py  test_config.py  test_fund_api.py  test_llm_gateway.py  test_local_store.py  test_news.py  test_stock_analyzer.py  test_stock_api.py  test_ui_smoke.py  test_walk_forward.py
