[project]
name = "fund-analyzer"
version = "0.2.0"
description = "基金智能分析助手 - 持仓分析/回测/策略优化"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "streamlit>=1.40.0",
    "plotly>=5.20.0",
    "openai>=2.0.0",
    "anthropic>=0.40.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
fund = "src.cli.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src.resources" = ["*.yaml"]
